# wildlife-speciesnet-detector

./: .gitignore  BACKUP_HISTORY.md  FINAL_GIT_SYNC.md  GITHUB_AUTH_GUIDE.md  GIT_SETUP.md  LICENSE  QUICK_START_GIT.md  README.md  README_ORGANIZATION.md  __init__.py  fix_git_push.bat  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_git.bat  setup_git.ps1  wildlife_detector.spec
core/: __init__.py  batch_processor.py  config.py  mock_species_net.py  species_detector.py  species_detector_direct.py
gui/: __init__.py  icons.py  main_window.py  splash.py  themes.py
scripts/: build_exe.bat  build_portable.bat  smoke_test.py
scripts/portable/: README_ja.txt  WildlifeDetector-debug.bat  WildlifeDetector.bat  build_smoke.py  xcopy_exclude.txt
tests/: conftest.py  test_batch_processor_resume.py  test_config.py  test_csv_exporter.py  test_extract_image_date.py  test_file_manager.py  test_japanese_names.py  test_organize_progress_and_paths.py  test_pivot_export.py  test_species_detector_parser.py  test_species_detector_structured.py
utils/: __init__.py  csv_exporter.py  file_manager.py  image_meta.py  japanese_names.json  japanese_names.py
